--- a/index.html
+++ b/index.html
@@ -11,12 +11,17 @@
 
 <body>
     <header class="cabeçalho">
-        <span class="cabeçalho menu-hamburguer"></span>
-        <img src="img/Logo.svg" alt="Logo da AluraBooks">
-        <a href="#"><img src="img/Favoritos.svg"></a>
-        <a href="#"><img src="img/Compras.svg"></a>
-        <a href="#"><img src="img/Usuário.svg"></a>
+        <div class="container">
+            <span class="cabeçalho__menu-hamburguer"></span>
+            <img src="img/Logo.svg" alt="Logo da AluraBooks">
+        </div>
+        <div class="container">
+            <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos"></a>
+            <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras"></a>
+            <a href="#"><img src="img/Usuário.svg" alt="Meu perfil"></a>
+        </div>
     </header>
+    
 </body>
 
 </html>
