--- a/index.html
+++ b/index.html
@@ -58,9 +58,10 @@
   <!-- Additional required wrapper -->
   <div class="swiper-wrapper">
     <!-- Slides -->
-    <div class="swiper-slide">Slide 1</div>
-    <div class="swiper-slide">Slide 2</div>
-    <div class="swiper-slide">Slide 3</div>
+    <div class="swiper-slide"><img src="img/ApacheKafka.png" alt="livro ApacheKafka"></div>
+    <div class="swiper-slide"><img src="img/Liderança.png" alt="livro sobre liderança"></div>
+    <div class="swiper-slide"><img src="img/Javascript.png" alt="livro sobre Javascript"></div>
+    <div class="swiper-slide"><img src="img/Guia Front-end.png" alt="livro sobre Front-end"></div>
     ...
   </div>
   <!-- If we need pagination -->
