--- a/index.html
+++ b/index.html
@@ -78,10 +78,11 @@
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
 <script>
-  const swiper = new Swiper('.swiper', {
+  const swiper = new Swiper
+  ('.swiper', {
     speed: 400,
-    spaceBetween: 100,
-    });
+    spaceBetween: 10,
+  });
 </script>
 
 </html>
