--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
 
 
   <!-- If we need navigation buttons -->
-  <div class="swiper-button-prev"></div>
-  <div class="swiper-button-next"></div>
+  <div class="swiper-button-prevv"></div>
+  <div class="swiper-button-nextt"></div>
 
   <!-- If we need scrollbar -->
   <div class="swiper-scrollbar"></div>
