--- a/index.html
+++ b/index.html
@@ -85,6 +85,12 @@
     speed: 400,
     spaceBetween: 10,
     slidesPerView: 3,
+
+    pagination: 
+    {
+      el: 'swiper-pagination',
+      type: 'bullets',
+    },
   });
 </script>
 
