--- a/index.html
+++ b/index.html
@@ -73,6 +73,31 @@
   <div class="swiper-button-prevv"></div>
   <div class="swiper-button-nextt"></div>
 
+  <div class="card">
+
+    <div class="card__descrição">
+
+      <div class="descrição">
+        <h3 class="descrição_titulo">talvez você também pode gostar...</h3>
+        <h2 class="descrição_titulo-livro">Angular 11 e firebase</h2>
+        <p class="descrição_texto">Construindo uma aplicação integrada com plataforma</p>
+      </div>
+      <img src="img/Angular-1.png" class="descrição__imagem">
+
+    </div>
+
+    <div class="card__botões">
+      <ul class="botões">
+        <li class="botões__item"><img src="img/Favoritos.svg" alt="Favoritar livro"></li>
+        <li class="botões__item"><img src="img/Compras.svg" alt="Adicionar ao Carrinho"></li>
+      </ul>
+    </div>
+
+      
+  </div>
+   
+
+
   <!-- If we need scrollbar -->
   <div class="swiper-scrollbar"></div>
 </div>
