--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
         <li class="botões__item"><img src="img/Favoritos.svg" alt="Favoritar livro"></li>
         <li class="botões__item"><img src="img/Compras.svg" alt="Adicionar ao Carrinho"></li>
       </ul>
+
+      <a href="#" class="botões__ancora">saiba mais</a>
     </div>
 
       
