--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <div class="card__descrição">
 
         <div class="descrição">
-          <img src="img/Estrelinhas.svg" alt="Avaliação 5 estrelas">
+          <img src="img/Estrelinhas.png" alt="Avaliação 5 estrelas">
           <h3 class="descrição_titulo">talvez você também pode gostar...</h3>
           <h2 class="descrição_titulo-livro">Angular 11 e firebase</h2>
           <p class="descrição_texto">Construindo uma aplicação integrada com plataforma</p>
