--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
         <a href="#" class="botões__ancora">saiba mais</a>
       </div>
-      <img src="img/Escritora.svg" class="descrição__imagem">
+      <img src="img/Perfil-escritora 1-1.png" class="descrição__imagem">
 
     </div>
 
