--- a/index.html
+++ b/index.html
@@ -89,6 +89,8 @@
 
       </div>
 
+    <div class="card">
+
       <div class="card__botões">
         <ul class="botões">
           <li class="botões__item"><img src="img/Favoritos.svg" alt="Favoritar livro"></li>
