--- a/index.html
+++ b/index.html
@@ -89,12 +89,23 @@
 
       </div>
 
-    
-     
+    <div class="card">
+
+      <div class="card__botões">
+        <ul class="botões">
+          <li class="botões__item"><img src="img/Favoritos.svg" alt="Favoritar livro"></li>
+          <li class="botões__item"><img src="img/Compras.svg" alt="Adicionar ao Carrinho"></li>
+
+        </ul>
+
+        <a href="#" class="botões__ancora">saiba mais</a>
+      </div>
+      <img src="img/Perfil-escritora 1-1.png" class="descrição__imagem">
+
     </div>
 
       <!-- 2º linha -->
-    <div class="card__botões">
+      <div class="card__botões">
         <!-- 1º coluna -->
         <ul class="botões">
           <li class="botões__item"><img src="img/Favoritos.svg" alt="Favoritar livro"></li>
