--- a/index.html
+++ b/index.html
@@ -105,6 +105,16 @@
       </div>
       <div class="card">
 
+        <div class="card__descrição">
+
+          <div class="descrição">
+            <img src="img/Estrelinhas.png" alt="Avaliação 5 estrelas">
+            <h3 class="descrição_titulo">Autora do Mêss</h3>
+            <h2 class="descrição_titulo-livro">Juliana Agarikov</h2>
+            <p class="descrição_texto">Analista de sistemas e escritora, Juliana é especialista em frontend</p>
+  
+          </div>
+
       <img src="img/Perfil-escritora 1-1.png" class="descrição__imagem">
 
 
@@ -120,7 +130,50 @@
       </div>
     </div>
 
+    <section class="topicos">
+      <h2 class="tópicos__titulo">TOPICOS VISITADOS RECENTEMENTE</h2>
+      <ul class="topicos__lista">
+        <li class="topicos__item">
+          <a href="#" class="topicos__link">Andrid</a>
 
+        </li>
+
+        <li class="topicos__item">
+          <a href="#" class="topicos__link">Marketing Digital</a>
+
+        </li>
+
+        <li class="topicos__item">
+          <a href="#" class="topicos__link">Agile</a>
+
+        </li>
+
+        <li class="topicos__item">
+          <a href="#" class="topicos__link">Startups</a>
+
+        </li>
+
+        <li class="topicos__item">
+          <a href="#" class="topicos__link">HTML e CSS</a>
+
+        </li>
+
+        <li class="topicos__item">
+          <a href="#" class="topicos__link">PYthon</a>
+
+        </li>
+
+        <li class="topicos__item">
+          <a href="#" class="topicos__link">OO</a>
+
+        </li>
+
+        <li class="topicos__item">
+          <a href="#" class="topicos__link">Java</a>
+
+        </li>
+        </ul>
+      </section>
 
     <!-- If we need scrollbar -->
     <div class="swiper-scrollbar"></div>
